--- a/web/docker_django/apps/todo/templates/home.html
+++ b/web/docker_django/apps/todo/templates/home.html
@@ -1,12 +1,13 @@
-{% extends "_base.html" %}
+{% extends "base.html" %}
 
 
 {% block content %}
 
 <div class="text-center">
   {% load staticfiles %}
+  <h1>Dockerify Django!</h1>
   <br>
-  <img src="http://media.django.es.s3.amazonaws.com/nuevo/images/djangopony.png">
+  <img src="http://www.pulilab.com/static/assets/favicon/favicon-196x196.png">
   <br>
   <p>This page has been viewed <strong>{{counter}}</strong> times!</p>
 </div>
